--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/BRBHeader/BRBHeaderEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/BRBHeader/BRBHeaderEditDialogClass.form
@@ -108,7 +108,7 @@
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="BRB  Data">
+                <TitledBorder title="BRP  Data">
                   <Border PropertyName="innerBorder" info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
                     <EtchetBorder/>
                   </Border>
