--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductionRecord/PREditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductionRecord/PREditDialogClass.form
@@ -34,10 +34,14 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jScrollPane1" alignment="0" max="32767" attributes="1"/>
-          <Component id="jLayeredPane1" alignment="0" max="32767" attributes="1"/>
           <Group type="102" alignment="0" attributes="0">
               <Component id="DesktopToolbar" min="-2" pref="620" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="123" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+              <Component id="jLayeredPane1" max="32767" attributes="1"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -564,7 +568,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-              <JLayeredPaneConstraints x="0" y="0" width="630" height="-1" layer="0" position="-1"/>
+              <JLayeredPaneConstraints x="-40" y="0" width="670" height="-1" layer="0" position="-1"/>
             </Constraint>
           </Constraints>
         </Component>
