--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProdutionRecordItem/PRitemEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProdutionRecordItem/PRitemEditDialogClass.form
@@ -126,6 +126,8 @@
                                   <Component id="toleranceLabel" alignment="0" pref="188" max="32767" attributes="0"/>
                                   <Component id="qtyneedLabel" alignment="0" max="32767" attributes="0"/>
                               </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="cbSRType" min="-2" pref="108" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -159,7 +161,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lblTelp" min="-2" max="-2" attributes="0"/>
-                          <Component id="qtyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="qtyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="cbSRType" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -300,6 +305,20 @@
                 </Property>
                 <Property name="name" type="java.lang.String" value="itemid" noResource="true"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="cbSRType">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Verdana" size="10" style="0"/>
+                </Property>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="0"/>
+                </Property>
+                <Property name="name" type="java.lang.String" value="cbSamplerecordstatus" noResource="true"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbSRTypeActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
