--- a/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
+++ b/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
@@ -330,6 +330,32 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FormPackingActionPerformed"/>
                   </Events>
                 </MenuItem>
+                <MenuItem class="javax.swing.JMenuItem" name="LaporanProduksi">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Laporan Produksi"/>
+                    <Property name="name" type="java.lang.String" value="LaporanProduksi" noResource="true"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LaporanProduksiActionPerformed"/>
+                  </Events>
+                </MenuItem>
+              </SubComponents>
+            </Menu>
+            <Menu class="javax.swing.JMenu" name="LaporanBC">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Laporan BC"/>
+                <Property name="name" type="java.lang.String" value="LaporanBC" noResource="true"/>
+              </Properties>
+              <SubComponents>
+                <MenuItem class="javax.swing.JMenuItem" name="PemasukanBaku">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Pemasukan Bahan Baku &amp; Penolong"/>
+                    <Property name="name" type="java.lang.String" value="PemasukanBaku" noResource="true"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PemasukanBakuActionPerformed"/>
+                  </Events>
+                </MenuItem>
               </SubComponents>
             </Menu>
             <MenuItem class="javax.swing.JMenuItem" name="clientItem">
